--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -51,6 +51,7 @@
 
   <th:block layout:fragment="script"></th:block>
   <th:block layout:fragment="script1"></th:block>
+  <th:block layout:fragment="script2"></th:block>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
