--- a/src/main/resources/templates/shop-grid.html
+++ b/src/main/resources/templates/shop-grid.html
@@ -180,7 +180,7 @@
                   <div class="latest-prdouct__slider__item">
                     <a href="#" class="latest-product__item">
                       <div class="latest-product__item__pic">
-                        <img src="img/latest-product/lp-1.jpg" alt="">
+                        <img src="/img/latest-product/lp-1.jpg" alt="">
                       </div>
                       <div class="latest-product__item__text">
                         <h6>Crab Pool Security</h6>
@@ -189,7 +189,7 @@
                     </a>
                     <a href="#" class="latest-product__item">
                       <div class="latest-product__item__pic">
-                        <img src="img/latest-product/lp-2.jpg" alt="">
+                        <img src="/img/latest-product/lp-2.jpg" alt="">
                       </div>
                       <div class="latest-product__item__text">
                         <h6>Crab Pool Security</h6>
@@ -198,7 +198,7 @@
                     </a>
                     <a href="#" class="latest-product__item">
                       <div class="latest-product__item__pic">
-                        <img src="img/latest-product/lp-3.jpg" alt="">
+                        <img src="/img/latest-product/lp-3.jpg" alt="">
                       </div>
                       <div class="latest-product__item__text">
                         <h6>Crab Pool Security</h6>
@@ -209,7 +209,7 @@
                   <div class="latest-prdouct__slider__item">
                     <a href="#" class="latest-product__item">
                       <div class="latest-product__item__pic">
-                        <img src="img/latest-product/lp-1.jpg" alt="">
+                        <img src="/img/latest-product/lp-1.jpg" alt="">
                       </div>
                       <div class="latest-product__item__text">
                         <h6>Crab Pool Security</h6>
@@ -218,7 +218,7 @@
                     </a>
                     <a href="#" class="latest-product__item">
                       <div class="latest-product__item__pic">
-                        <img src="img/latest-product/lp-2.jpg" alt="">
+                        <img src="/img/latest-product/lp-2.jpg" alt="">
                       </div>
                       <div class="latest-product__item__text">
                         <h6>Crab Pool Security</h6>
@@ -227,7 +227,7 @@
                     </a>
                     <a href="#" class="latest-product__item">
                       <div class="latest-product__item__pic">
-                        <img src="img/latest-product/lp-3.jpg" alt="">
+                        <img src="/img/latest-product/lp-3.jpg" alt="">
                       </div>
                       <div class="latest-product__item__text">
                         <h6>Crab Pool Security</h6>
@@ -266,7 +266,7 @@
                 </div>
                 <div class="col-lg-4">
                   <div class="product__discount__item">
-                    <div class="product__discount__item__pic set-bg" data-setbg="img/product/discount/pd-2.jpg">
+                    <div class="product__discount__item__pic set-bg" data-setbg="/img/product/discount/pd-2.jpg">
                       <div class="product__discount__percent">-20%</div>
                       <ul class="product__item__pic__hover">
                         <li><a href="#"><i class="fa fa-heart"></i></a></li>
@@ -283,7 +283,7 @@
                 </div>
                 <div class="col-lg-4">
                   <div class="product__discount__item">
-                    <div class="product__discount__item__pic set-bg" data-setbg="img/product/discount/pd-3.jpg">
+                    <div class="product__discount__item__pic set-bg" data-setbg="/img/product/discount/pd-3.jpg">
                       <div class="product__discount__percent">-20%</div>
                       <ul class="product__item__pic__hover">
                         <li><a href="#"><i class="fa fa-heart"></i></a></li>
@@ -300,7 +300,7 @@
                 </div>
                 <div class="col-lg-4">
                   <div class="product__discount__item">
-                    <div class="product__discount__item__pic set-bg" data-setbg="img/product/discount/pd-4.jpg">
+                    <div class="product__discount__item__pic set-bg" data-setbg="/img/product/discount/pd-4.jpg">
                       <div class="product__discount__percent">-20%</div>
                       <ul class="product__item__pic__hover">
                         <li><a href="#"><i class="fa fa-heart"></i></a></li>
@@ -317,7 +317,7 @@
                 </div>
                 <div class="col-lg-4">
                   <div class="product__discount__item">
-                    <div class="product__discount__item__pic set-bg" data-setbg="img/product/discount/pd-5.jpg">
+                    <div class="product__discount__item__pic set-bg" data-setbg="/img/product/discount/pd-5.jpg">
                       <div class="product__discount__percent">-20%</div>
                       <ul class="product__item__pic__hover">
                         <li><a href="#"><i class="fa fa-heart"></i></a></li>
@@ -334,7 +334,7 @@
                 </div>
                 <div class="col-lg-4">
                   <div class="product__discount__item">
-                    <div class="product__discount__item__pic set-bg" data-setbg="img/product/discount/pd-6.jpg">
+                    <div class="product__discount__item__pic set-bg" data-setbg="/img/product/discount/pd-6.jpg">
                       <div class="product__discount__percent">-20%</div>
                       <ul class="product__item__pic__hover">
                         <li><a href="#"><i class="fa fa-heart"></i></a></li>
@@ -377,183 +377,18 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-lg-4 col-md-6 col-sm-6">
+            <div class="col-lg-4 col-md-6 col-sm-6" th:each="product : ${productList}">
               <div class="product__item">
-                <div class="product__item__pic set-bg" data-setbg="img/product/product-1.jpg">
+                <div class="product__item__pic set-bg" th:data-setbg="${product.modelAsset.thumbnail.imageUrl}">
                   <ul class="product__item__pic__hover">
                     <li><a href="#"><i class="fa fa-heart"></i></a></li>
                     <li><a href="#"><i class="fa fa-retweet"></i></a></li>
-                    <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
+                    <li><a th:href="@{|/cart/add/${product.id}|}"><i class="fa fa-shopping-cart"></i></a></li>
                   </ul>
                 </div>
                 <div class="product__item__text">
-                  <h6><a href="#">Crab Pool Security</a></h6>
-                  <h5>$30.00</h5>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-6">
-              <div class="product__item">
-                <div class="product__item__pic set-bg" data-setbg="img/product/product-2.jpg">
-                  <ul class="product__item__pic__hover">
-                    <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                    <li><a href="#"><i class="fa fa-retweet"></i></a></li>
-                    <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
-                  </ul>
-                </div>
-                <div class="product__item__text">
-                  <h6><a href="#">Crab Pool Security</a></h6>
-                  <h5>$30.00</h5>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-6">
-              <div class="product__item">
-                <div class="product__item__pic set-bg" data-setbg="img/product/product-3.jpg">
-                  <ul class="product__item__pic__hover">
-                    <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                    <li><a href="#"><i class="fa fa-retweet"></i></a></li>
-                    <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
-                  </ul>
-                </div>
-                <div class="product__item__text">
-                  <h6><a href="#">Crab Pool Security</a></h6>
-                  <h5>$30.00</h5>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-6">
-              <div class="product__item">
-                <div class="product__item__pic set-bg" data-setbg="img/product/product-4.jpg">
-                  <ul class="product__item__pic__hover">
-                    <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                    <li><a href="#"><i class="fa fa-retweet"></i></a></li>
-                    <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
-                  </ul>
-                </div>
-                <div class="product__item__text">
-                  <h6><a href="#">Crab Pool Security</a></h6>
-                  <h5>$30.00</h5>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-6">
-              <div class="product__item">
-                <div class="product__item__pic set-bg" data-setbg="img/product/product-5.jpg">
-                  <ul class="product__item__pic__hover">
-                    <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                    <li><a href="#"><i class="fa fa-retweet"></i></a></li>
-                    <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
-                  </ul>
-                </div>
-                <div class="product__item__text">
-                  <h6><a href="#">Crab Pool Security</a></h6>
-                  <h5>$30.00</h5>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-6">
-              <div class="product__item">
-                <div class="product__item__pic set-bg" data-setbg="img/product/product-6.jpg">
-                  <ul class="product__item__pic__hover">
-                    <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                    <li><a href="#"><i class="fa fa-retweet"></i></a></li>
-                    <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
-                  </ul>
-                </div>
-                <div class="product__item__text">
-                  <h6><a href="#">Crab Pool Security</a></h6>
-                  <h5>$30.00</h5>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-6">
-              <div class="product__item">
-                <div class="product__item__pic set-bg" data-setbg="img/product/product-7.jpg">
-                  <ul class="product__item__pic__hover">
-                    <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                    <li><a href="#"><i class="fa fa-retweet"></i></a></li>
-                    <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
-                  </ul>
-                </div>
-                <div class="product__item__text">
-                  <h6><a href="#">Crab Pool Security</a></h6>
-                  <h5>$30.00</h5>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-6">
-              <div class="product__item">
-                <div class="product__item__pic set-bg" data-setbg="img/product/product-8.jpg">
-                  <ul class="product__item__pic__hover">
-                    <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                    <li><a href="#"><i class="fa fa-retweet"></i></a></li>
-                    <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
-                  </ul>
-                </div>
-                <div class="product__item__text">
-                  <h6><a href="#">Crab Pool Security</a></h6>
-                  <h5>$30.00</h5>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-6">
-              <div class="product__item">
-                <div class="product__item__pic set-bg" data-setbg="img/product/product-9.jpg">
-                  <ul class="product__item__pic__hover">
-                    <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                    <li><a href="#"><i class="fa fa-retweet"></i></a></li>
-                    <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
-                  </ul>
-                </div>
-                <div class="product__item__text">
-                  <h6><a href="#">Crab Pool Security</a></h6>
-                  <h5>$30.00</h5>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-6">
-              <div class="product__item">
-                <div class="product__item__pic set-bg" data-setbg="img/product/product-10.jpg">
-                  <ul class="product__item__pic__hover">
-                    <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                    <li><a href="#"><i class="fa fa-retweet"></i></a></li>
-                    <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
-                  </ul>
-                </div>
-                <div class="product__item__text">
-                  <h6><a href="#">Crab Pool Security</a></h6>
-                  <h5>$30.00</h5>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-6">
-              <div class="product__item">
-                <div class="product__item__pic set-bg" data-setbg="img/product/product-11.jpg">
-                  <ul class="product__item__pic__hover">
-                    <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                    <li><a href="#"><i class="fa fa-retweet"></i></a></li>
-                    <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
-                  </ul>
-                </div>
-                <div class="product__item__text">
-                  <h6><a href="#">Crab Pool Security</a></h6>
-                  <h5>$30.00</h5>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-6">
-              <div class="product__item">
-                <div class="product__item__pic set-bg" data-setbg="img/product/product-12.jpg">
-                  <ul class="product__item__pic__hover">
-                    <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                    <li><a href="#"><i class="fa fa-retweet"></i></a></li>
-                    <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
-                  </ul>
-                </div>
-                <div class="product__item__text">
-                  <h6><a href="#">Crab Pool Security</a></h6>
-                  <h5>$30.00</h5>
+                  <h6><a th:href="@{|/product/detail/${product.id}|}">[[${product.subject}]]</a></h6>
+                  <h5>$[[${product.price}]]</h5>
                 </div>
               </div>
             </div>
@@ -577,7 +412,7 @@
         <div class="col-lg-3 col-md-6 col-sm-6">
           <div class="footer__about">
             <div class="footer__about__logo">
-              <a href="./index.html"><img src="img/logo.png" alt=""></a>
+              <a href="./index.html"><img src="/img/logo.png" alt=""></a>
             </div>
             <ul>
               <li>Address: 60-49 Road 11378 New York</li>
@@ -636,7 +471,7 @@
                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
               </p>
             </div>
-            <div class="footer__copyright__payment"><img src="img/payment-item.png" alt=""></div>
+            <div class="footer__copyright__payment"><img src="/img/payment-item.png" alt=""></div>
           </div>
         </div>
       </div>
