feat: implement searchByCategory function for product filtering
카테고리별로 에셋을 가져오는 기능을 만들었다.

--- a/src/main/resources/templates/asset-release.html
+++ b/src/main/resources/templates/asset-release.html
@@ -36,7 +36,7 @@
             <option value="Props">Props</option>
             <option value="Vehicles">Vehicles</option>
             <option value="Architecture">Architecture</option>
-            <option value="Weapons & Military">Weapons & Military</option>
+            <option value="W&M">Weapons & Military</option>
             <option value="Sci-Fi">Sci-Fi</option>
             <option value="Fantasy">Fantasy</option>
           </select>
