--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -94,7 +94,7 @@
                 <div>English</div>
                 <span class="arrow_carrot-down"></span>
                 <ul>
-                  <li><a th:href="@{/product/list}">Korean</a></li>
+                  <li><a th:href="@{/product/list/all}">Korean</a></li>
                   <li><a th:href="@{/test/lab}">English</a></li>
                 </ul>
               </div>
@@ -122,7 +122,7 @@
           <nav class="header__menu">
             <ul>
               <li class="active"><a th:href="@{/}">Home</a></li>
-              <li><a th:href="@{/product/list}">Shop</a></li>
+              <li><a th:href="@{/product/list/all}">Shop</a></li>
               <li><a href="#">Forum</a></li>
               <li><a href="./blo/g.html">Create Asset</a></li>
               <li><a th:href="@{/inquire}">Inquire</a></li>
