--- a/src/main/resources/templates/shop-grid.html
+++ b/src/main/resources/templates/shop-grid.html
@@ -80,14 +80,14 @@
             <div class="sidebar__item">
               <h4>Categories</h4>
               <ul>
-                <li><a th:href="@{/product/char}">Characters</a></li>
-                <li><a th:href="@{/product/envi}">Enviroments</a></li>
-                <li><a th:href="@{/product/props}">Props</a></li>
-                <li><a th:href="@{/product/vehi}">Vehicles</a></li>
-                <li><a th:href="@{/product/archi}">Architecture</a></li>
-                <li><a href="#">Weapons & Military</a></li>
-                <li><a href="#">Sci-Fi</a></li>
-                <li><a href="#">Fantasy</a></li>
+                <li><a th:href="@{/product/list/Characters}">Characters</a></li>
+                <li><a th:href="@{/product/envi/Enviroments}">Enviroments</a></li>
+                <li><a th:href="@{/product/list/Props}">Props</a></li>
+                <li><a th:href="@{/product/list/vehi}">Vehicles</a></li>
+                <li><a th:href="@{/product/list/archi}">Architecture</a></li>
+                <li><a th:href="@{/product/list/W&M}">Weapons & Military</a></li>
+                <li><a th:href="@{/product/list/Sci-Fi}">Sci-Fi</a></li>
+                <li><a th:href="@{/product/list/Fantasy}">Fantasy</a></li>
               </ul>
             </div>
             <div class="sidebar__item">
@@ -365,7 +365,7 @@
               </div>
               <div class="col-lg-4 col-md-4">
                 <div class="filter__found">
-                  <h6><span>16</span> Products found</h6>
+                  <h6><span>[[${count}]]</span> Products found</h6>
                 </div>
               </div>
               <div class="col-lg-4 col-md-3">
@@ -404,80 +404,6 @@
     </div>
   </section>
   <!-- Product Section End -->
-
-  <!-- Footer Section Begin -->
-  <footer class="footer spad">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-3 col-md-6 col-sm-6">
-          <div class="footer__about">
-            <div class="footer__about__logo">
-              <a href="./index.html"><img src="/img/logo.png" alt=""></a>
-            </div>
-            <ul>
-              <li>Address: 60-49 Road 11378 New York</li>
-              <li>Phone: +65 11.188.888</li>
-              <li>Email: hello@colorlib.com</li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6 col-sm-6 offset-lg-1">
-          <div class="footer__widget">
-            <h6>Useful Links</h6>
-            <ul>
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">About Our Shop</a></li>
-              <li><a href="#">Secure Shopping</a></li>
-              <li><a href="#">Delivery infomation</a></li>
-              <li><a href="#">Privacy Policy</a></li>
-              <li><a href="#">Our Sitemap</a></li>
-            </ul>
-            <ul>
-              <li><a href="#">Who We Are</a></li>
-              <li><a href="#">Our Services</a></li>
-              <li><a href="#">Projects</a></li>
-              <li><a href="#">Contact</a></li>
-              <li><a href="#">Innovation</a></li>
-              <li><a href="#">Testimonials</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-12">
-          <div class="footer__widget">
-            <h6>Join Our Newsletter Now</h6>
-            <p>Get E-mail updates about our latest shop and special offers.</p>
-            <form action="#">
-              <input type="text" placeholder="Enter your mail">
-              <button type="submit" class="site-btn">Subscribe</button>
-            </form>
-            <div class="footer__widget__social">
-              <a href="#"><i class="fa fa-facebook"></i></a>
-              <a href="#"><i class="fa fa-instagram"></i></a>
-              <a href="#"><i class="fa fa-twitter"></i></a>
-              <a href="#"><i class="fa fa-pinterest"></i></a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="footer__copyright">
-            <div class="footer__copyright__text">
-              <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                Copyright &copy;
-                <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made
-                with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com"
-                  target="_blank">Colorlib</a>
-                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-              </p>
-            </div>
-            <div class="footer__copyright__payment"><img src="/img/payment-item.png" alt=""></div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </footer>
-  <!-- Footer Section End -->
 </body>
 
 </html>
