발표 전 빌드

--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -124,7 +124,7 @@
               <li class="active"><a th:href="@{/}">Home</a></li>
               <li><a th:href="@{/product/list/all}">Shop</a></li>
               <li><a href="#">Forum</a></li>
-              <li><a href="./blo/g.html">Create Asset</a></li>
+              <li><a th:href="@{|/api/assets/create|}">Create Asset</a></li>
               <li><a th:href="@{/inquire}">Inquire</a></li>
             </ul>
           </nav>
