--- a/src/main/resources/templates/shop-characters.html
+++ b/src/main/resources/templates/shop-characters.html
@@ -14,9 +14,9 @@
             </div>
             <ul>
               <li><a th:href="@{/product/char}">Characters</a></li>
-              <li><a th:href="@{/product/envi}">Environments</a></li>
-              <li><a href="#">Props</a></li>
-              <li><a href="#">Vehicles</a></li>
+                <li><a th:href="@{/product/envi}">Enviroments</a></li>
+                <li><a th:href="@{/product/props}">Props</a></li>
+                <li><a th:href="@{/product/vehi}">Vehicles</a></li>
               <li><a href="#">Architecture</a></li>
               <li><a href="#">Weapons & Military</a></li>
               <li><a href="#">Sci-Fi</a></li>
