--- a/src/main/resources/templates/shop-grid.html
+++ b/src/main/resources/templates/shop-grid.html
@@ -1,9 +1,9 @@
 <html layout:decorate="~{layout}" layout:fragment="content">
 
 <body>
-  
-   <!-- Hero Section Begin -->
-   <section class="hero hero-normal">
+
+  <!-- Hero Section Begin -->
+  <section class="hero hero-normal">
     <div class="container">
       <div class="row">
         <div class="col-lg-3">
@@ -46,7 +46,7 @@
               </div>
             </div>
           </div>
-          
+
         </div>
       </div>
     </div>
@@ -184,7 +184,8 @@
                       </div>
                       <div class="latest-product__item__text">
                         <h6>Lord Vampire</h6>
-                        <span class="text-danger">$35 <del class="text-muted opacity-50 d-inline small">$69.99</del></span>
+                        <span class="text-danger">$35 <del
+                            class="text-muted opacity-50 d-inline small">$69.99</del></span>
                       </div>
                     </a>
                     <a href="#" class="latest-product__item">
@@ -193,7 +194,8 @@
                       </div>
                       <div class="latest-product__item__text">
                         <h6>Stylized Traps - Big Pack</h6>
-                        <span class="text-danger">$10 <del class="text-muted opacity-50 d-inline small">$19.99</del></span>
+                        <span class="text-danger">$10 <del
+                            class="text-muted opacity-50 d-inline small">$19.99</del></span>
                       </div>
                     </a>
                     <a href="#" class="latest-product__item">
@@ -266,7 +268,8 @@
                 </div>
                 <div class="col-lg-4">
                   <div class="product__discount__item">
-                    <div class="product__discount__item__pic set-bg" data-setbg="/img/shop-categories/char/sale_off1.jpg">
+                    <div class="product__discount__item__pic set-bg"
+                      data-setbg="/img/shop-categories/char/sale_off1.jpg">
                       <div class="product__discount__percent">-50%</div>
                       <ul class="product__item__pic__hover">
                         <li><a href="#"><i class="fa fa-heart"></i></a></li>
@@ -283,7 +286,8 @@
                 </div>
                 <div class="col-lg-4">
                   <div class="product__discount__item">
-                    <div class="product__discount__item__pic set-bg" data-setbg="/img/shop-categories/archi/sale_off1.jpg">
+                    <div class="product__discount__item__pic set-bg"
+                      data-setbg="/img/shop-categories/archi/sale_off1.jpg">
                       <div class="product__discount__percent">-30%</div>
                       <ul class="product__item__pic__hover">
                         <li><a href="#"><i class="fa fa-heart"></i></a></li>
@@ -300,7 +304,8 @@
                 </div>
                 <div class="col-lg-4">
                   <div class="product__discount__item">
-                    <div class="product__discount__item__pic set-bg" data-setbg="/img/shop-categories/archi/sale_off3.jpg">
+                    <div class="product__discount__item__pic set-bg"
+                      data-setbg="/img/shop-categories/archi/sale_off3.jpg">
                       <div class="product__discount__percent">-28%</div>
                       <ul class="product__item__pic__hover">
                         <li><a href="#"><i class="fa fa-heart"></i></a></li>
@@ -317,7 +322,8 @@
                 </div>
                 <div class="col-lg-4">
                   <div class="product__discount__item">
-                    <div class="product__discount__item__pic set-bg" data-setbg="/img/shop-categories/envi/sale_off6.jpg">
+                    <div class="product__discount__item__pic set-bg"
+                      data-setbg="/img/shop-categories/envi/sale_off6.jpg">
                       <div class="product__discount__percent">-50%</div>
                       <ul class="product__item__pic__hover">
                         <li><a href="#"><i class="fa fa-heart"></i></a></li>
@@ -334,7 +340,8 @@
                 </div>
                 <div class="col-lg-4">
                   <div class="product__discount__item">
-                    <div class="product__discount__item__pic set-bg" data-setbg="/img/shop-categories/envi/sale_off1.jpg">
+                    <div class="product__discount__item__pic set-bg"
+                      data-setbg="/img/shop-categories/envi/sale_off1.jpg">
                       <div class="product__discount__percent">-50%</div>
                       <ul class="product__item__pic__hover">
                         <li><a href="#"><i class="fa fa-heart"></i></a></li>
@@ -379,13 +386,21 @@
           <div class="row">
             <div class="col-lg-4 col-md-6 col-sm-6" th:each="product : ${productList}">
               <div class="product__item">
-                <div class="product__item__pic set-bg" th:data-setbg="${product.modelAsset.thumbnail.imageUrl}">
-                  <ul class="product__item__pic__hover">
-                    <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                    <li><a href="#"><i class="fa fa-retweet"></i></a></li>
-                    <li><a th:href="@{|/cart/add/${product.id}|}"><i class="fa fa-shopping-cart"></i></a></li>
-                  </ul>
-                </div>
+                  <div th:if="${product.modelAsset.thumbnail != null}" class="product__item__pic set-bg" th:data-setbg="${product.modelAsset.thumbnail.imageUrl}">
+                    <ul class="product__item__pic__hover">
+                      <li><a href="#"><i class="fa fa-heart"></i></a></li>
+                      <li><a href="#"><i class="fa fa-retweet"></i></a></li>
+                      <li><a th:href="@{|/cart/add/${product.id}|}"><i class="fa fa-shopping-cart"></i></a></li>
+                    </ul>
+                  </div>
+                
+                  <div th:if="${product.modelAsset.thumbnail == null}" class="product__item__pic set-bg" data-setbg="/img/default.png">
+                    <ul class="product__item__pic__hover">
+                      <li><a href="#"><i class="fa fa-heart"></i></a></li>
+                      <li><a href="#"><i class="fa fa-retweet"></i></a></li>
+                      <li><a th:href="@{|/cart/add/${product.id}|}"><i class="fa fa-shopping-cart"></i></a></li>
+                    </ul>
+                  </div>
                 <div class="product__item__text">
                   <h6><a th:href="@{|/product/detail/${product.id}|}">[[${product.subject}]]</a></h6>
                   <h5>$[[${product.price}]]</h5>
